--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,28 @@ buildscript {
     ext.ktor_version = '1.3.1'
 
     repositories {
+        jcenter()
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
     }
 }
 
+
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'application'
+mainClassName = 'testApp.AppKt'
+apply plugin: 'com.github.johnrengelman.shadow'
+
+// This task will generate your fat JAR and put it in the ./build/libs/ directory
+shadowJar {
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+}
 
 sourceCompatibility = 1.8
 compileKotlin {
@@ -24,12 +37,6 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
-}
-
 repositories {
     jcenter()
 }
@@ -37,5 +44,6 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
+    compile 'joda-time:joda-time:2.10.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
